cs-mod/k8s-mod/hello-mod/mod-hello-kubernetes.yaml
#
#   k8s mod: hello-kubernetes 
#
#     Example app based on paulbouwer/hello-kubernetes
#     Published at https://hello-mod.cskylab.net
#

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: hello-mod
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: trantortech
    # cert-manager.io/cluster-issuer: letsencrypt-staging
    # cert-manager.io/cluster-issuer: letsencrypt

spec:
  rules:
  - host: hello-mod.cskylab.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-kubernetes-svc
            port:
              number: 80
  tls:
  - hosts:
      - hello-mod.cskylab.net
    secretName: hello-kubernetes-tls

---

apiVersion: v1
kind: Service
metadata:
  namespace: hello-mod
  name: hello-kubernetes-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-kubernetes

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hello-mod
  name: hello-kubernetes-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-kubernetes
  template:
    metadata:
      labels:
        app: hello-kubernetes
    spec:
      containers:
      - name: hello-kubernetes
        image: harbor.cskylab.net/dockerhub/paulbouwer/hello-kubernetes:1.9
        resources:
        ports:
        - containerPort: 8080
